[gd_scene load_steps=18 format=3 uid="uid://cr6noovmcl47a"]

[ext_resource type="Texture2D" uid="uid://cdu4syw57sypi" path="res://sprites/satyr_.png" id="1"]
[ext_resource type="Script" path="res://scenes/satyr.gd" id="2"]

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource("1")
region = Rect2(0, 96, 24, 24)

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource("1")
region = Rect2(24, 96, 24, 24)

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource("1")
region = Rect2(48, 96, 24, 24)

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource("1")
region = Rect2(72, 96, 24, 24)

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource("1")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("1")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("1")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("1")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("1")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource("1")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource("1")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource("1")
region = Rect2(72, 48, 24, 24)

[sub_resource type="SpriteFrames" id="13"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("9")
}, {
"duration": 1.0,
"texture": SubResource("10")
}, {
"duration": 1.0,
"texture": SubResource("11")
}, {
"duration": 1.0,
"texture": SubResource("12")
}, {
"duration": 1.0,
"texture": SubResource("9")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("1")
}, {
"duration": 1.0,
"texture": SubResource("2")
}, {
"duration": 1.0,
"texture": SubResource("3")
}, {
"duration": 1.0,
"texture": SubResource("4")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("5")
}, {
"duration": 1.0,
"texture": SubResource("6")
}, {
"duration": 1.0,
"texture": SubResource("7")
}, {
"duration": 1.0,
"texture": SubResource("8")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="14"]
size = Vector2(5.08686, 7.07948)

[sub_resource type="CircleShape2D" id="15"]
radius = 54.6939

[node name="satyr" type="CharacterBody2D"]
script = ExtResource("2")

[node name="body" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -12)
sprite_frames = SubResource("13")
animation = &"idle"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("14")

[node name="detection_radius" type="Area2D" parent="."]
position = Vector2(0, -7)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_radius"]
shape = SubResource("15")

[node name="calm_down_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="labels" type="Node2D" parent="."]
z_index = 100

[node name="labels" type="VBoxContainer" parent="labels"]
custom_minimum_size = Vector2(50, 40)
offset_left = -25.0
offset_top = -58.0
offset_right = 25.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="hungry_label" type="Label" parent="labels/labels"]
visible = false
layout_mode = 2
text = "Hungry"

[node name="afraid_label" type="Label" parent="labels/labels"]
visible = false
layout_mode = 2
text = "Afraid"

[connection signal="body_entered" from="detection_radius" to="." method="_on_detection_radius_body_entered"]
[connection signal="timeout" from="calm_down_timer" to="." method="_on_calm_down_timer_timeout"]
